--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <div class="page-header">
+    <h1>{{title}}<small>{{listtitle}}</small></h1>
+  </div>
+
+
+  <ls-app></ls-app>
+</div>
